update: fix ui unresponsive on mobile

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -22,6 +22,7 @@ body {
 	color: var(--foreground);
 	background-color: var(--background);
 	font-family: "Nunito", system-ui, sans-serif;
+	font-size: 0.875rem;
 	font-weight: 400;
 	line-height: 1.6;
 }
